# care-coordinator-modified

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/appointments/: __init__.py  enums.py  response.py  schema.py
backend/app/api/doctors/: __init__.py  response.py  schema.py
backend/app/api/patients/: __init__.py  enums.py  response.py  schema.py
backend/app/api/responses/: __init__.py  messages.py
backend/app/auth/: __init__.py  schema.py
backend/app/config/: env.py  settings.py
backend/app/db/: __init__.py  crud.py
backend/tests/: conftest.py  test_config.py  test_root.py
frontend/: .env  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/actions/: appointment.actions.ts  patient.actions.ts  user.actions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppointmentModal.tsx  DynamicFormField.tsx  ErrorPanel.tsx  FileUploader.tsx  Loading.tsx  PasskeyModal.tsx  StatCard.tsx  StatusBadge.tsx  SubmitButton.tsx
frontend/src/forms/: CreateAppointmentForm.tsx  LoginForm.tsx  RegisterForm.tsx  UserForm.tsx
frontend/src/hooks/: useProjectStore.tsx  useStorage.tsx
frontend/src/layouts/: Form.tsx
frontend/src/lib/: constants.ts  fetch-client.ts  queries.ts  retrieval.ts  utils.ts  validation.ts
frontend/src/stores/: DoctorStore.tsx
frontend/src/styles/: display.css  form.css  layout.css  shadcn.css  typography.css
frontend/src/types/: api.ts  common.ts  (+2 more)
nginx/: nginx.conf
(+11 files in other folders)
